# qemu

./: configure  meson.build  qemu-options.hx  vl.c  x86-host.sh  x86-modcpy.sh  xtensa-host.sh  xtensa-trace.sh
accel/tcg/: tcg-all.c
default-configs/: i386-softmmu.mak  xtensa-softmmu.mak
default-configs/devices/: i386-softmmu.mak  xtensa-softmmu.mak
hw/: Kconfig  Makefile.objs
hw/adsp/: Kconfig  Makefile.objs  cavs.c  common.c
hw/adsp/dsp/: Makefile.objs  byt-shim.c  byt.c  cavs-shim.c  cavs.c  common.c  hikey.c  hsw-shim.c  hsw.c  imx8-mu.c  imx8.c  imx8m.c  irqstr.h  log.c  mbox.c  mbox.h  mt8195-mb.c  mt8195.c  mt8195.h
hw/adsp/host/: Makefile.objs  bxt.c  byt.c  cavs-shim.c  cavs.c  hsw-pci.c  hsw.c
hw/audio/: Kconfig  adsp_acpi.c  adsp_byt.c  adsp_cavs.c  adsp_common.c  adsp_host_dma.c  adsp_hsw.c  hda-codec.c  intel-hda.c  meson.build  trace-events
hw/core/: machine.c
hw/dma/: Kconfig  Makefile.objs  dw-dma-core.c  dw-dma-dsp.c  dw-dma-pci.c  edma-core.c  edma-dsp.c  hda-dma-core.c  hda-dma-dsp.c  meson.build  sdma-core.c  sdma-dsp.c  trace-events
hw/i386/: acpi-build.c
hw/ssi/: Kconfig  Makefile.objs  esai.c  meson.build  sai.c  ssp.c  trace-events
hw/virtio/: Makefile.objs  vhost-backend.c  vhost-dsp-pci.c  vhost-dsp.c  vhost-vsock.c
hw/xtensa/: Kconfig  adsp-common.c  byt.c  cavs.c  common.h  cse.h  css.h  hsw.c  imx8-mu.c  imx8.c  imx8.h  imx8m.c  irqstr.c  manifest.h  meson.build  mt8195.c  plat_auth.h  trace-events  trace.h
include/hw/: boards.h
include/hw/adsp/: byt.h  cavs.h  fw.h  (+9 more)
linux-headers/linux/: vhost.h
softmmu/: vl.c
tests/fp/: meson.build
util/: Makefile.objs  meson.build  qemu-io-bridge.c  qemu-reg-log.c
(+15 files in other folders)
